<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xrkj.app.heatdev.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/txt_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/default_temperature"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/temperature"
        android:textSize="@dimen/temperature_size" />

    <TextView
        android:id="@+id/txt_temperature_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_temperature"
        android:text="@string/temperature_unit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/temperature_unit_size" />

    <Switch
        android:id="@+id/switch_IO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textIsSelectable="true"
        android:text="@string/on"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:layout_below="@+id/txt_temperature"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/txt_pwm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:text="@string/pwm_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_pwm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_pwm_title"
        android:layout_toEndOf="@+id/txt_pwm_title"
        android:text="@string/default_pwm"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/txt_pwm_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_pwm"
        android:layout_toEndOf="@+id/txt_pwm"
        android:text=" %"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar_pwm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_pwm_title"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="@string/default_pwm" />

    <TextView
        android:id="@+id/txt_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar_pwm"
        android:layout_marginTop="25dp"
        android:text="@string/temp_threshold_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_temp_title"
        android:layout_toEndOf="@+id/txt_temp_title"
        android:text="20"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_min"
        android:layout_toEndOf="@+id/txt_min"
        android:text=" ~ "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:text="80"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <SeekBar
        android:id="@+id/seekBar_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_temp_title"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="20" />

    <SeekBar
        android:id="@+id/seekBar_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar_min"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="80" />

    <TextView
        android:id="@+id/txt_broadcast_period_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar_max"
        android:layout_marginTop="34dp"
        android:text="@string/broadcast_period_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_broadcast_period_title"
        android:layout_toEndOf="@+id/txt_broadcast_period_title"
        android:entries="@array/period"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/txt_time_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner"
        android:layout_toEndOf="@+id/spinner"
        android:text="@string/period_time_unit"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>
